--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node job.js"
+    "start": ""
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "google-spreadsheet": "^3.0.10",
-    "node-schedule": "^1.3.2"
+    "google-spreadsheet": "^3.0.10"
   }
 }
