- Add qs package - 使用 pchome 股利頁面 - 移除沒用的 code - 修復股利資料來源

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": ""
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/TerryLee7788/job-for-stock-update#readme",
   "dependencies": {
-    "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3",
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
     "dotenv": "^8.2.0",
-    "google-spreadsheet": "^3.0.10"
+    "google-spreadsheet": "^3.1.15",
+    "qs": "^6.10.1"
   }
 }
