feat: Add Google service account key and enable dynamic credential loading from environment variables.

--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -25,10 +25,8 @@ jobs:
       run: npm install
 
     - name: Run update script
-      # 請確保您的 Google Sheet 憑證 (credentials.json) 有透過 GitHub Secrets 設定
-      # 或者將憑證內容設為環境變數
       env:
         GOOGLE_SERVICE_ACCOUNT_EMAIL: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }}
         GOOGLE_PRIVATE_KEY: ${{ secrets.GOOGLE_PRIVATE_KEY }}
         GOOGLE_SHEET_ID: ${{ secrets.GOOGLE_SHEET_ID }}
-      run: node index.js # 假設您的進入點是 index.js，請依實際情況修改
+      run: node index.js
